update nav and section

--- a/test1/index.html
+++ b/test1/index.html
@@ -1,24 +1,39 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
 <head>
 	<title>Jemar Ly Te</title>
+<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="container">
 
-	<div class="picture">
-		<img class="resize" src="./assets/image/profile pic.jpg">
-		<h2>Jemar Ly Te</h2>
-		<h3>Full stack Web Developer</h3>
-	</div>
+<body>	
+	<nav> 
+		<a href="#">Home</a>
+		<a href="#">About</a>
+		<a href="#">Project</a>
+		<a href="#">Contact</a>
+			
+	</nav>
+
+	<section>
+		<div class="picture">
+			<img class="resize" src="./assets/image/profile pic.jpg">
+			<h1>Jemar Ly Te</h1>
+			<h3>Web Developer</h3>
+		</div>
+	</section>
+
+	<section class="about">
 		<h2>About</h2>
 	<div>
 		
 		<h3>Experience</h3>
 		<ul>
-			<li>Customer Experience Expert</li>
-			<li>Licence Financial Advisor</li>
-			<li>Full Stack Web Developer</li>
+			<li>Customer Experience Expert 2018-Present</li>
+			<li>Licence Financial Advisor 2018</li>
+			<li>Full Stack Web Developer 2019</li>
 		</ul>
 
 	</div>
@@ -29,6 +44,8 @@
 			<li>Associate Degree in Hotel and Restaurant Management 2007</li>
 		</ul>
 	</div>
+	</section>
+
 	<div>
 		<h2>My Projects</h2>
 		<img  src="https://images.pexels.com/photos/1779487/pexels-photo-1779487.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260">
